Fixing horizontal scroll on small screen

--- a/css/style1.css
+++ b/css/style1.css
@@ -320,10 +320,10 @@ i:hover{
   }
   
   .jumbotron{
-    
+    height: auto;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    
     text-align: center;
 
   }
